--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "scripts": {
     "start": "node server/index.js"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
-    "express": "^4.13.3",
-    "nodemon": "^1.11.0"
+    "express": "^4.13.3"
   }
 }
